Se cambio de base de datos PostgreSQL a SQL Server por temas de agilidad, debido a errores al querer instalar NetTopologySuit para guardar coordenadas de ubicaciones.

--- a/EFCoreCinemaAPI/appsettings.json
+++ b/EFCoreCinemaAPI/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Port=5432;Database=PGSEFCoreWithAspNetAPI;Username=postgres;Password=root"
+    "DefaultConnection": "Server=DESKTOP-6444KEN;Database=EFCoreWithAspNetAPI;Integrated Security=True;TrustServerCertificate=True"
   }
 }
